--- a/README
+++ b/README
@@ -18,7 +18,7 @@ To build this you need the iPhoneOS 3.0 SDK from Apple and an
 Intel Mac running Mac OS X 10.5 or later.
 
 Before starting your build, you will need to check out the re-
-quired submodules (that is, only MumbleKit)
+quired submodules:
 
  $ git submodule init
  $ git submodule update
