--- a/Resources/icons/ios/README
+++ b/Resources/icons/ios/README
@@ -1,2 +1,12 @@
-Icons made for Mumble for iOS
+Icons made for Mumble for iOS.
 Licensed under the same terms as the program itself.
+(Except for the ones listed below)
+
+Exceptions
+==========
+
+Glyphish Icons by Jospeh Wain (Creative Commons Attribution 3.0 United States License)
+--------------------------------------------------------------------------------------
+connection.png
+radar.png
+
