--- a/Dependencies/plcrashreporter/README
+++ b/Dependencies/plcrashreporter/README
@@ -4,3 +4,9 @@ The dump was generated from plcrashreporter SVN at r422.
 Re-sync with:
 
  $ ./sync.bash ~/path-to/svn-repo
+
+To get a plcrashutil, you can use the build-plcrashutil.bash script:
+
+ $ ./build-plcrashutil.bash
+
+It'll install plcrashutil into $HOME/bin as 'mumble-ios-plcrashutil'
